# veridie-app

./: .gitmodules  README.md
VeriDie/: .gitignore
VeriDie/app/: build.gradle
VeriDie/app/src/androidTest/java/com/vasilyev/veridie/: ExampleInstrumentedTest.java  InteropTest.java
VeriDie/app/src/main/: AndroidManifest.xml
VeriDie/app/src/main/cpp/: .clang-format  CMakeLists.txt  native-lib.cpp
VeriDie/app/src/main/cpp/bt/: device.cpp  device.hpp  listener.hpp  proxy.hpp
VeriDie/app/src/main/cpp/core/: commandadapter.cpp  commandadapter.hpp  commands.hpp  controller.cpp  controller.hpp  events.cpp  events.hpp  exec.cpp  exec.hpp  external.hpp  log.cpp  log.hpp  logging.hpp  proxy.hpp  timer.cpp  timerengine.cpp  timerengine.hpp
VeriDie/app/src/main/cpp/dice/: cast.cpp  cast.hpp  engine.cpp  engine.hpp  serializer.cpp  serializer.hpp
VeriDie/app/src/main/cpp/fsm/: context.hpp  statebase.hpp  stateconnecting.cpp  stateidle.cpp  statenegotiating.cpp  stateplaying.cpp  states.hpp  stateswitcher.hpp
VeriDie/app/src/main/cpp/jni/: btinvoker.cpp  btinvoker.hpp  btproxy.cpp  btproxy.hpp  cmdmanager.cpp  cmdmanager.hpp  exec.cpp  exec.hpp  interop.cpp  interop.hpp  javainvoker.cpp  logger.cpp  logger.hpp  native-lib.cpp  proxy.cpp  proxy.hpp  uiinvoker.cpp  uiinvoker.hpp  uiproxy.cpp  uiproxy.hpp
VeriDie/app/src/main/cpp/sign/: cmd.hpp  commandmanager.cpp  commandmanager.hpp  commandpool.hpp  commands.cpp  commands.hpp  commandstorage.cpp  commandstorage.hpp  events.cpp  events.hpp
VeriDie/app/src/main/cpp/tests/: async_test.cpp  bt_test.cpp  cmd_test.cpp  controller_test.cpp  dice_test.cpp  fakecontroller.cpp  fakelogger.hpp  pool_test.cpp  test_async.cpp  test_cmd.cpp  test_controller.cpp  test_log.cpp  test_task.cpp  test_threading.cpp  threading_test.cpp
VeriDie/app/src/main/cpp/ui/: listener.hpp  proxy.hpp
VeriDie/app/src/main/cpp/utils/: alwayscopyable.hpp  async.cpp  async.hpp  callback.hpp  canceller.hpp  format.cpp  format.hpp  future.hpp  logger.cpp  logger.hpp  logging.hpp  mempool.hpp  poolbuilder.hpp  poolptr.hpp  task.hpp  taskowner.hpp  timer.cpp  timer.hpp  worker.cpp  worker.hpp  xmlparser.hpp
VeriDie/app/src/main/java/com/vasilyev/veridie/: CastItem.java  CastRequest.java  MainActivity.java  Utils.java
VeriDie/app/src/main/java/com/vasilyev/veridie/bluetooth/: BluetoothService.java  ConnectionManager.java
VeriDie/app/src/main/java/com/vasilyev/veridie/fragments/: ConnectingFragment.java  IdleFragment.java  NegotiationFragment.java  PlayingFragment.java  RequestDialogFragment.java
VeriDie/app/src/main/java/com/vasilyev/veridie/interop/: BluetoothBridge.java  Bridge.java  Command.java  CommandHandler.java  Event.java  UiBridge.java
VeriDie/app/src/main/java/com/vasilyev/veridie/utils/: Cast.java  CastRequest.java  Fonts.java
VeriDie/app/src/main/res/layout/: activity_main.xml  fragment_connecting.xml  fragment_idle.xml  fragment_negotiation.xml  fragment_playing.xml  fragment_request_dialog.xml  list_item_cast.xml  list_item_connecting.xml
VeriDie/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
VeriDie/app/src/test/java/com/vasilyev/veridie/: ExampleUnitTest.java
VeriDie/gradle/wrapper/: gradle-wrapper.properties
